# noctune

./: .gitignore  README.md  plan.md  pyproject.toml
apps/studio-web/: .env.example  README.md  next.config.ts  package.json  tsconfig.json
apps/studio-web/app/: globals.css  layout.tsx  page.tsx
apps/studio-web/app/api/studio/allow/: route.ts
apps/studio-web/app/api/studio/chat/: route.ts
apps/studio-web/app/api/studio/config/: route.ts
apps/studio-web/app/api/studio/runs/: route.ts
apps/studio-web/app/api/studio/runs/[runId]/approvals/: route.ts
apps/studio-web/app/api/studio/runs/[runId]/approvals/[approvalId]/: route.ts
apps/studio-web/app/api/studio/runs/[runId]/events/: route.ts
apps/studio-web/app/api/studio/runs/[runId]/state/: route.ts
apps/studio-web/app/api/studio/runs/[runId]/stop/: route.ts
apps/studio-web/app/api/studio/sessions/: route.ts
apps/studio-web/app/api/studio/sessions/[id]/: route.ts
apps/studio-web/app/studio/: page.tsx
apps/studio-web/app/studio/runs/: page.tsx
apps/studio-web/app/studio/runs/[runId]/: page.tsx
apps/studio-web/lib/studio/: allow.ts  noctune.ts  paths.ts  permissions.ts  repo_fs.ts  runs.ts
src/noctune/: cli.py
src/noctune/core/: applier.py  approvals.py  config.py  edit_ops.py  gates.py  gitignore.py  gitops.py  impact.py  indexer.py  llm.py  logger.py  paths.py  policy_packs.py  prompts.py  repair.py  run_state.py  runner.py  scanner.py  state.py  tools.py
src/noctune/prompts/: __init__.py  approve.md  draft.md  edit.md  plan.md  repair.md  review.md  select.md
src/noctune/studio/: __init__.py  daemon.py  db.py  mcp_server.py  worker.py
tests/: conftest.py  test_llm_client.py  test_studio_db.py
