[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "noctune"
version = "0.2.0"
description = "Resumable, local-LLM code upgrader for Python repos (no diffs, per-symbol ops)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nontawat Srilert" }]
dependencies = [
  "httpx>=0.27.0",
  "pathspec>=0.12.1",
]

[project.scripts]
noctune = "noctune.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/noctune"]
include = ["src/noctune/prompts/*.md", "src/noctune/prompts/*.txt"]

[tool.noctune]
# Optional: you can keep config in pyproject.toml under [tool.noctune]
# but noctune init will default to writing noctune.toml at repo root.
