[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "noctune"
version = "0.3.0"
description = "Resumable, local-LLM code upgrader for Python repos (no diffs, per-symbol ops)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nontawat Srilert" }]
dependencies = [
  "httpx>=0.27.0",
  "pathspec>=0.12.1",
  "openai",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
studio = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "sse-starlette>=1.6.5",
  "pydantic>=2.5.0",
  "mcp>=0.1.0",
]

[project.scripts]
noctune = "noctune.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/noctune"]
include = ["src/noctune/prompts/*.md"]

[tool.noctune]
# Optional: you can keep config in pyproject.toml under [tool.noctune]
# but noctune init will default to writing noctune.toml at repo root.
